# vanilla_tokio_actor

./: Cargo.toml  README.md
examples/: async_foo_with_traits.rs  foo_original.rs  foo_with_traits.rs
src/: actor.rs
