[package]
name = "tokio_actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
derivative = "2.2.0"
duplicate = "1.0.0"
tokio = { version = "1.27.0", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
